--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^17.0.45",
-    "@types/react": "^18.2.5",
     "@types/react-dom": "^18.2.3",
     "i18next": "^22.4.15",
     "react": "^18.2.0",
@@ -58,5 +57,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.7"
   }
 }
